--- a/app/src/main/res/layout/free_tickets.xml
+++ b/app/src/main/res/layout/free_tickets.xml
@@ -45,7 +45,7 @@
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/free_quantity_label"
-        app:srcCompat="@drawable/ic_done_white_24dp" />
+        android:src="@drawable/ic_done_white_24dp" />
 
     <TextView
         android:id="@+id/free_ticket_name"
