--- a/app/src/main/res/layout/title_and_description_layout.xml
+++ b/app/src/main/res/layout/title_and_description_layout.xml
@@ -127,44 +127,47 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/uploadbutton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
-                app:drawableRightCompat="@drawable/ic_file_upload_white_24dp"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="Upload Image"
-                android:textColor="@color/colorWhite"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            <Button
+              android:id="@+id/uploadbutton"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:background="@color/colorPrimary"
+              android:fontFamily="@font/montserrat_bold"
+              android:layout_marginTop="16dp"
+              android:text="Upload Image"
+              android:textColor="@color/colorWhite"
+              android:paddingRight="16dp"
+              android:drawableRight="@drawable/ic_file_upload_white_24dp"
+              app:layout_constraintEnd_toStartOf="@+id/guideline2"
+              app:layout_constraintStart_toStartOf="@+id/guideline"
+              app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textView3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:drawableLeftCompat="@drawable/ic_lightbulb_outline_blue_24dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text=" Recommended Size: 480dp x 300dp "
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/imageviewsplash" />
+              android:id="@+id/textView3"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="8dp"
+              android:layout_marginEnd="8dp"
+              android:fontFamily="@font/montserrat_regular"
+              android:text=" Recommended Size: 480dp x 300dp "
+              android:textColor="@color/colorPrimary"
+              android:textSize="14sp"
+              app:drawableLeftCompat="@drawable/ic_lightbulb_outline_blue_24dp"
+              app:layout_constraintEnd_toStartOf="@+id/guideline2"
+              app:layout_constraintStart_toStartOf="@+id/guideline"
+              app:layout_constraintTop_toBottomOf="@+id/imageviewsplash"/>
 
             <ImageView
-                android:id="@+id/imageviewsplash"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:adjustViewBounds="true"
-                android:background="#aaa"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toTopOf="parent" />
+              android:id="@+id/imageviewsplash"
+              android:layout_width="match_parent"
+              android:layout_height="168dp"
+              android:adjustViewBounds="true"
+              android:background="#aaa"
+              android:scaleType="centerCrop"
+              app:layout_constraintEnd_toStartOf="@+id/guideline2"
+              app:layout_constraintStart_toStartOf="@+id/guideline"
+              app:layout_constraintTop_toTopOf="parent"/>
 
             <ImageView
                 android:id="@+id/iconview"
