--- a/app/src/main/res/xml/files.xml
+++ b/app/src/main/res/xml/files.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths>
-<files-path name="imageviewsplash" path="."/>
-    </paths>
+<android.support.design.widget.CoordinatorLayout
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+ >
+
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/card_view_recycler_list"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+
+</android.support.design.widget.CoordinatorLayout>
+
