--- a/app/src/main/res/layout/title_and_description_layout.xml
+++ b/app/src/main/res/layout/title_and_description_layout.xml
@@ -19,8 +19,8 @@
         app:titleTextAppearance="@style/Ikirori_TextAppearance_Toolbar"
         app:titleTextColor="@android:color/white" />
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/scrollView2"
+    <ScrollView
+      android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -47,82 +47,82 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_end="24dp" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="Event title"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/uploadbutton" />
+          <TextView
+            android:id="@+id/textView4"
+            android:textStyle="bold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="Event title"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/uploadbutton"/>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/event_title_label_id"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="4dp"
-                app:boxCornerRadiusBottomStart="4dp"
-                app:boxCornerRadiusTopEnd="4dp"
-                app:boxCornerRadiusTopStart="4dp"
-                app:boxStrokeColor="@color/colorPrimary"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textView4">
+              android:id="@+id/event_title_label_id"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              app:boxBackgroundMode="outline"
+              app:boxCornerRadiusBottomEnd="4dp"
+              app:boxCornerRadiusBottomStart="4dp"
+              app:boxCornerRadiusTopEnd="4dp"
+              app:boxCornerRadiusTopStart="4dp"
+              app:boxStrokeColor="@color/colorPrimary"
+              app:layout_constraintEnd_toStartOf="@+id/guideline2"
+              app:layout_constraintHorizontal_bias="1.0"
+              app:layout_constraintStart_toStartOf="@+id/guideline"
+              app:layout_constraintTop_toBottomOf="@+id/textView4">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:includeFontPadding="false"
-                    android:textCursorDrawable="@color/colorPrimary"
-                    android:textStyle="bold" />
+                  android:textStyle="bold"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:fontFamily="@font/montserrat_regular"
+                  android:includeFontPadding="false"
+                  android:textCursorDrawable="@color/colorPrimary"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="Description"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/event_title_label_id" />
+          <TextView
+            android:id="@+id/textView5"
+            android:textStyle="bold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="Description"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/event_title_label_id"/>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/event_description_label_id"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="4dp"
-                app:boxCornerRadiusBottomStart="4dp"
-                app:boxCornerRadiusTopEnd="4dp"
-                app:boxCornerRadiusTopStart="4dp"
-                app:boxStrokeColor="@color/colorPrimary"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textView5">
+              android:id="@+id/event_description_label_id"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              app:boxBackgroundMode="outline"
+              app:boxCornerRadiusBottomEnd="4dp"
+              app:boxCornerRadiusBottomStart="4dp"
+              app:boxCornerRadiusTopEnd="4dp"
+              app:boxCornerRadiusTopStart="4dp"
+              app:boxStrokeColor="@color/colorPrimary"
+              app:layout_constraintEnd_toStartOf="@+id/guideline2"
+              app:layout_constraintHorizontal_bias="0.0"
+              app:layout_constraintStart_toStartOf="@+id/guideline"
+              app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:lines="5"
-                    android:textCursorDrawable="@color/colorPrimary"
-                    android:textStyle="bold" />
+                  android:textStyle="bold"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:fontFamily="@font/montserrat_regular"
+                  android:lines="5"
+                  android:textCursorDrawable="@color/colorPrimary"/>
 
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -137,7 +137,7 @@
               android:text="Upload Image"
               android:textColor="@color/colorWhite"
               android:paddingRight="16dp"
-              android:drawableRight="@drawable/ic_file_upload_white_24dp"
+              app:drawableRightCompat="@drawable/ic_file_upload_white_24dp"
               app:layout_constraintEnd_toStartOf="@+id/guideline2"
               app:layout_constraintStart_toStartOf="@+id/guideline"
               app:layout_constraintTop_toBottomOf="@+id/textView3"/>
@@ -174,7 +174,7 @@
                 android:layout_width="0dp"
                 android:layout_height="44dp"
                 android:padding="5dp"
-                android:src="@drawable/ic_photo_camera_24dp"
+                app:srcCompat="@drawable/ic_photo_camera_24dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageviewsplash"
                 app:layout_constraintEnd_toEndOf="@+id/imageviewsplash"
                 app:layout_constraintStart_toStartOf="@+id/imageviewsplash"
@@ -190,7 +190,36 @@
                 app:backgroundTint="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/event_description_label_id"
-                android:src="@drawable/ic_arrow_forward_white_24dp" />
+                app:srcCompat="@drawable/ic_arrow_forward_white_24dp" />
+          <TextView
+            android:id="@+id/title_error_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invalid Title"
+            android:textColor="@color/colorPrimary"
+            android:visibility="invisible"
+            app:drawableLeftCompat="@drawable/ic_report_black_24dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/event_title_label_id"/>
+          <TextView
+            android:id="@+id/Description_error_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invalid Description "
+            android:textColor="@color/colorPrimary"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/event_description_label_id"/>
+          <TextView
+            android:id="@+id/EventImageUriErrorTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invalid Picture"
+            android:textColor="@color/colorPrimary"
+            android:visibility="invisible"
+            app:drawableLeftCompat="@drawable/ic_report_black_24dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/uploadbutton"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
