--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#008577</color>
     <color name="colorAccent">#008577</color>
+    <color name="colorDarkGrey">#E91E63</color>
 </resources>
 
 
